work2-lesson4.css

--- a/HTML・CSS/HTML-work2/work2-lesson4.css
+++ b/HTML・CSS/HTML-work2/work2-lesson4.css
@@ -1,6 +1,10 @@
-body[
-    class="header"
-    width: 400px
-    height: 80px
-    
-]
+.red{
+    height: 80px;
+    width: 400px;
+    background-color:red;
+}
+.yellow{
+    height: 70px;
+    width: 360px;
+    background-color: yellow;
+}
